--- a/ar.html
+++ b/ar.html
@@ -1,27 +1,24 @@
 <html>
-
 <head>
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <script
         src="https://rawgit.com/nicolocarpignoli/nicolocarpignoli.github.io/master/ar-click-events/events.js"></script>
     <script>
-
-
         AFRAME.registerComponent('markerhandler', {
-
             init: function () {
-                const animatedMarker = document.querySelector("#animated-marker");
-                const aEntity = document.querySelector(".clickable");
-
-                // every click, we make our model grow in size :)
-                animatedMarker.addEventListener('click', function (ev, target) {
-                    const intersectedElement = ev && ev.detail && ev.detail.intersectedEl;
-                    if (aEntity && intersectedElement === aEntity) {
-                        const scale = aEntity.getAttribute('scale');
-                        Object.keys(scale).forEach((key) => scale[key] = scale[key] + 1);
-                        aEntity.setAttribute('scale', scale);
-                    }
+                const planes = document.querySelectorAll('.clickable');
+                
+                planes.forEach((plane) => {
+                    plane.addEventListener('click', function () {
+                        const scale = plane.getAttribute('scale');
+                        // Increasing the scale of the plane by 1 on each click
+                        plane.setAttribute('scale', {
+                            x: scale.x + 1,
+                            y: scale.y + 1,
+                            z: scale.z + 1
+                        });
+                    });
                 });
             }
         });
@@ -35,18 +32,16 @@
     </div>
     <a-scene renderer="logarithmicDepthBuffer: true; colorManagement: true" embedded arjs>
         <!-- Adding a cursor for detecting clicks -->
-
-
         <a-marker markerhandler emitevents="true" cursor="rayOrigin: mouse" id="animated-marker" type='barcode'
             value='6' preset="hiro" controller>
             <!-- 2x2 Grid of Planes with class 'clickable' for cursor interaction -->
-            <a-plane plane-grid class="clickable" position="-0.5 0.5 0" rotation="-90 0 0" width="0.5" height="0.5"
+            <a-plane class="clickable" position="-0.5 0.5 0" rotation="-90 0 0" width="0.5" height="0.5"
                 color="red"></a-plane>
-            <a-plane plane-grid class="clickable" position="0.5 0.5 0" rotation="-90 0 0" width="0.5" height="0.5"
+            <a-plane class="clickable" position="0.5 0.5 0" rotation="-90 0 0" width="0.5" height="0.5"
                 color="blue"></a-plane>
-            <a-plane plane-grid class="clickable" position="-0.5 0.5 1" rotation="-90 0 0" width="0.5" height="0.5"
+            <a-plane class="clickable" position="-0.5 0.5 1" rotation="-90 0 0" width="0.5" height="0.5"
                 color="green"></a-plane>
-            <a-plane plane-grid class="clickable" position="0.5 0.5 1" rotation="-90 0 0" width="0.5" height="0.5"
+            <a-plane class="clickable" position="0.5 0.5 1" rotation="-90 0 0" width="0.5" height="0.5"
                 color="yellow"></a-plane>
 
             <!-- Image elements displayed in AR -->
@@ -62,5 +57,4 @@
         <a-entity camera></a-entity>
     </a-scene>
 </body>
-
 </html>
